hphp/hack/test/typecheck/postfix_parse2.php.exp
File "postfix_parse2.php", line 4, characters 3-6:
Typing error (Typing[4110])
File "postfix_parse2.php", line 4, characters 3-6:
This is a num (int/float) because this is used in an arithmetic operation
File "postfix_parse2.php", line 3, characters 12-17:
It is incompatible with a string
